--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
+  equatable: ^2.0.5
   font_awesome_flutter: ^10.5.0
+  go_router: ^10.0.0
 
 dev_dependencies:
   flutter_test:
